--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,7 +31,7 @@
         android:layout_marginEnd="129dp"
         android:layout_marginRight="129dp"
         android:ems="10"
-        android:inputType="text"
+        android:inputType="numberDecimal"
         android:text="@string/_11922018"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
